docs: align Subject/execute-as model + record doAs deprecation
Correct the JGDMS docs against the verified DirtyChai Subject model:
sealed Subject hierarchy, user bound via callAs on a ScopedValue folded at
getContext() (combiner not retained on the ACC), getSubject(acc) as an
acc-ignoring shim, n-party conjunctive intersection, and the fixed
AccessControlContext.optimize() AIOOBE on doAsPrivileged(.,.,null).

Fix doAs(UserSubject)->callAs, worker-via-doAs, sealed-permits, and
'current() never falls back to the ACC' errors across STD-003 v3, the
identity/multi-subject/authorization blog posts, spiffe-admin-deployment,
and the DESIGN docs. Record the doAs/doAsPrivileged deprecation decision
(identity is orthogonal to the code/privilege boundary) in STD-003 §14.4
and the blog posts, add the sudo-style multi-subject callAs example
(blog-post-3b + STD-003 §13.5), record BUG-002 (optimize AIOOBE, fixed)
and mark BUG-001 fixed in DirtyChai-known-bugs, and add superseded
banners to STD-003 v2/base and blog v1.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>